--- a/style.css
+++ b/style.css
@@ -8,6 +8,37 @@
     font-style: normal;
 }
 
+.nav-link {
+    position: relative;
+    text-decoration: none;
+    color: rgb(239, 239, 239);
+  }
+
+  /* Underline for active link */
+  .nav-link.active::after,
+  .nav-link:hover::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    left: 0;
+    bottom: -3px;
+    transition: width 0.3s ease-in-out;
+  }
+
+  /* Hover animation */
+  .nav-link::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: white;
+    left: 0;
+    bottom: -3px;
+    transition: width 0.3s ease-in-out;
+  }
+
 body.preloader-active {
     position: fixed;
     width: 100%;
